rancher/resources/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rancher-http-route
  namespace: cattle-system
spec:
  parentRefs:
  - name: cluster-gw
    namespace: nlb-infra
    sectionName: web-ls-tls
  hostnames:
    - rancher.cluster-hybrid.ddnsfree.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: rancher
      port: 80
